--- a/brandstyle.css
+++ b/brandstyle.css
@@ -49,6 +49,42 @@ body, html {
 	font-weight: bold
 }
 
+.fa {
+  padding: 20px;
+  font-size: 30px;
+  width: 50px;
+  text-align: center;
+  text-decoration: none;
+  margin: 5px 10px;
+
+.fa:hover {
+    opacity: 0.7;
+}
+
+.fa-facebook {
+  background: #3B5998;
+  color: white;
+}
+
+.fa-twitter {
+  background: #55ACEE;
+  color: white;
+}
+
+.fa-youtube {
+  background: #bb0000;
+  color: white;
+}
+
+.fa-instagram {
+  background: #125688;
+  color: white;
+}
+
+.fa-soundcloud {
+  background: #ff7700;
+  color: white;
+}
 
 /*-- Contact form styling --*/
 form {
@@ -126,9 +162,8 @@ textarea {
 
 /*-- Header image & title --*/
 #header{
-	height: 155px;
-	margin-right: -10px;
-	margin-left: -30px;
+	height: 151px;
+	margin-left: 160px;
 	margin-top: -5px;
 	margin-bottom: 0px;
 	font-family: 'Black Ops One', cursive;
@@ -225,14 +260,15 @@ button{
 
 /*-- Media Queries --*/
 @media(max-width: 768px){
-	#logo2, #p{
+	#logo2, #p, h3, footer{
+		margin-left: -10px;
 		float: none;
 		text-align: center;
-		width: 100%;
+		width: 97%;
 		}
 	#header, #rightcol{
 		width: 100%;
-		margin: -7px;
+		margin: 0px;
 		padding-top: -60px;
 	}
 	}
@@ -270,6 +306,7 @@ button{
 		#logo{
 			
 			width: 100%;
+			margin-right: 50px;
 			height: 100px;
 }
 
